--- a/app/src/main/res/layout/fragment_login.xml
+++ b/app/src/main/res/layout/fragment_login.xml
@@ -37,7 +37,7 @@
                 android:hint="@string/contrase_a"
                 android:inputType="textPassword"
                 android:minHeight="@dimen/min_heigth"
-                app:layout_constraintBottom_toTopOf="@+id/button"
+                app:layout_constraintBottom_toTopOf="@+id/ingresar_btn"
                 app:layout_constraintEnd_toEndOf="parent"
                 app:layout_constraintHorizontal_bias="0.497"
                 app:layout_constraintStart_toStartOf="parent"
@@ -59,7 +59,7 @@
                 app:layout_constraintVertical_bias="0.7" />
 
             <Button
-                android:id="@+id/button"
+                android:id="@+id/ingresar_btn"
                 android:layout_width="@dimen/boton_ancho"
                 android:layout_height="@dimen/min_heigth"
                 android:text="@string/boton"
